--- a/PROP-SEGONAENTREGA/src/views/assignaturaForm.fxml
+++ b/PROP-SEGONAENTREGA/src/views/assignaturaForm.fxml
@@ -1,14 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="views.Controller"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CtrlAssignaturaView">
+   <center>
+      <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+         <children>
+            <HBox id="name" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label id="nom_assig" text="Nom:" />
+                  <TextField />
+                  <Label text="Abreviaci" />
+                  <TextField />
+               </children>
+            </HBox>
+            <HBox id="plaest" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Pla d'estudis:" />
+                  <ChoiceBox prefWidth="150.0" />
+                  <Label text="Quadrimestre:" />
+                  <TextField />
+               </children>
+            </HBox>
+            <HBox id="description" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <Label text="Descripcio:" />
+                  <TextArea prefHeight="100.0" prefWidth="524.0" />
+               </children>
+            </HBox>
+            <HBox id="grups" prefHeight="100.0" prefWidth="200.0">
+               <children>
+                  <HBox prefHeight="100.0" prefWidth="200.0" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
+   </center>
+</BorderPane>
