--- a/PROP-SEGONAENTREGA/src/views/aulaForm.fxml
+++ b/PROP-SEGONAENTREGA/src/views/aulaForm.fxml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -7,29 +9,46 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.172-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CtrlAulaView">
+<BorderPane xmlns="http://javafx.com/javafx/8.0.172-ea" stylesheets="@../resources/mainview.css" xmlns:fx="http://javafx.com/fxml/1" fx:controller="views.CtrlAulaView">
    <center>
-      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+      <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
          <children>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox alignment="CENTER_LEFT" fillWidth="false" spacing="30.0">
                <children>
-                  <Label text="Label" />
-                  <Label text="Label" />
-                  <Label text="Label" />
-                  <Label text="Label" />
-                  <Label text="Label" />
+                  <Label text="Edifici:" />
+                  <Label text="Planta:" />
+                  <Label text="Aula:" />
+                  <Label text="Capacitat:" />
+                  <Label text="Tipus aula:" />
                </children>
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
             </VBox>
-            <VBox prefHeight="200.0" prefWidth="100.0">
+            <VBox alignment="CENTER" spacing="20.0">
                <children>
                   <TextField />
                   <TextField />
                   <TextField />
                   <TextField />
-                  <ChoiceBox prefWidth="150.0" />
+                  <ChoiceBox prefWidth="170.0" />
                </children>
             </VBox>
          </children>
       </HBox>
    </center>
+   <bottom>
+      <HBox alignment="CENTER" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+            <Button id="aula_cancel" fx:id="cancel_button" mnemonicParsing="false" text="Cancel·la" />
+            <Button id="aula_save" fx:id="save_button" mnemonicParsing="false" text="Guarda" />
+         </children>
+         <BorderPane.margin>
+            <Insets top="20.0" />
+         </BorderPane.margin>
+      </HBox>
+   </bottom>
+   <padding>
+      <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+   </padding>
 </BorderPane>
