--- a/PROP-SEGONAENTREGA/src/resources/mainview.css
+++ b/PROP-SEGONAENTREGA/src/resources/mainview.css
@@ -12,14 +12,14 @@
     -fx-blend-mode: multiply;
 }
 
-#assig_save, #pe_save, #aula_save, #plus_button
+#assig_save, #pe_save, #aula_save, #plus_button, #assig_plus, #plaest_plus
 {
     -fx-background-color:#57f271;
     -fx-alignment:center;
     -fx-background-radius:30;
 }
 
-#assig_cancel, #pe_cancel, #aula_cancel, #delete_button, #plaest_elim_assig
+#assig_cancel, #pe_cancel, #aula_cancel, #delete_button, #plaest_elim_assig, #assig_elimina_correq
 {
     -fx-background-color:#f9406f;
     -fx-alignment:center;
