--- a/PROP-SEGONAENTREGA/src/views/plaEstudisForm.fxml
+++ b/PROP-SEGONAENTREGA/src/views/plaEstudisForm.fxml
@@ -67,7 +67,7 @@
                   <HBox alignment="CENTER" spacing="10.0" VBox.vgrow="ALWAYS">
                      <children>
                         <ChoiceBox fx:id="choice_assignatures" prefWidth="210.0" />
-                        <Button fx:id="plaest_afegeix_assig" mnemonicParsing="false" text="+" />
+                        <Button id="plaest_plus" fx:id="plaest_afegeix_assig" mnemonicParsing="false" text="+" />
                      </children>
                      <padding>
                         <Insets bottom="10.0" />
