--- a/PROP-SEGONAENTREGA/src/views/assignaturaForm.fxml
+++ b/PROP-SEGONAENTREGA/src/views/assignaturaForm.fxml
@@ -51,7 +51,7 @@
                 </HBox>
                 <HBox id="plaest" alignment="CENTER_RIGHT" VBox.vgrow="ALWAYS">
                     <children>
-                        <HBox alignment="CENTER" HBox.hgrow="ALWAYS">
+                        <HBox alignment="CENTER_LEFT" HBox.hgrow="ALWAYS">
                             <children>
                                 <Label text="Pla d'estudis:" HBox.hgrow="ALWAYS">
                                     <padding>
@@ -96,7 +96,7 @@
                     <children>
                           <VBox spacing="10.0" HBox.hgrow="ALWAYS">
                               <children>
-                                  <HBox VBox.vgrow="ALWAYS">
+                                  <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
                                       <children>
                                           <Label text="#Grups:">
                                               <padding>
@@ -109,7 +109,7 @@
                                           <Insets bottom="10.0" />
                                       </VBox.margin>
                                   </HBox>
-                                  <HBox VBox.vgrow="ALWAYS">
+                                  <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
                                       <children>
                                           <Label text="Capacitat:">
                                                   <padding>
@@ -122,7 +122,7 @@
                                           <Insets bottom="10.0" />
                                       </padding>
                                   </HBox>
-                                  <HBox VBox.vgrow="ALWAYS">
+                                  <HBox alignment="CENTER_LEFT" VBox.vgrow="ALWAYS">
                                       <children>
                                           <Label text="#Subgrups:">
                                               <padding>
